--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ dependencies:
   search_choices: ^2.2.5
   youtube_caption_scraper: ^0.1.3
   flutter_tts: ^3.7.0
+  flutter_localization: ^0.1.12
+  awesome_select: ^6.0.0
+  in_app_purchase: ^3.1.7
   # audio_service: ^0.19.2
   # audio_cache: ^2.0.0
   # audioplayers: ^4.1.0
