large file seprate audio created but not merged it

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   flutter_localization: ^0.1.12
   awesome_select: ^6.0.0
   in_app_purchase: ^3.1.7
+  google_mlkit_translation: ^0.8.0
+  # flutter_ffmpeg: ^0.4.2
+  ffmpeg_kit_flutter: ^5.1.0
   # audio_service: ^0.19.2
   # audio_cache: ^2.0.0
   # audioplayers: ^4.1.0
