--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,10 @@ dependencies:
   in_app_purchase: ^3.1.7
   google_mlkit_translation: ^0.8.0
   # flutter_ffmpeg: ^0.4.2
-  ffmpeg_kit_flutter: ^5.1.0
+  # ffmpeg_kit_flutter: ^5.1.0
+  flutter_ffmpeg: ^0.4.2
+  permission_handler: ^10.4.3
+  file_picker: ^5.3.3
   # audio_service: ^0.19.2
   # audio_cache: ^2.0.0
   # audioplayers: ^4.1.0
