--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.3
 
 environment:
   sdk: '>=2.19.2 <3.0.0'
@@ -35,46 +35,22 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  scroll_navigation: ^1.3.2
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
   firebase_core: ^2.7.0
   cloud_firestore: ^4.4.3
   fluttertoast: ^8.2.1
   flutter_login: ^4.1.1
   firebase_auth: ^4.2.9
   shared_preferences: ^2.0.18
-  flutter_firebase_chat_core: ^1.6.4
-  flutter_chat_ui: ^1.6.6
-  uuid: ^3.0.7
   url_launcher: ^6.1.11
-  audio_service: ^0.18.10
-  just_audio: ^0.9.34
   audioplayers: ^0.20.1
-  just_audio_background: ^0.0.1-beta.10
-  youtube_explode_dart: ^1.12.4
   audio_video_progress_bar: ^1.0.1
-  restart_app: ^1.2.1
-  font_awesome_flutter: ^10.0.0
   search_choices: ^2.2.5
-  youtube_caption_scraper: ^0.1.3
   flutter_tts: ^3.7.0
   flutter_localization: ^0.1.12
-  awesome_select: ^6.0.0
   in_app_purchase: ^3.1.7
-  google_mlkit_translation: ^0.8.0
-  # flutter_ffmpeg: ^0.4.2
-  # ffmpeg_kit_flutter: ^5.1.0
-  flutter_ffmpeg: ^0.4.2
-  permission_handler: ^10.4.3
-  file_picker: ^5.3.3
   animated_notch_bottom_bar: ^1.0.0
-  flashy_tab_bar2: ^0.0.6
   contactus: ^1.2.3
-  # audio_service: ^0.19.2
-  # audio_cache: ^2.0.0
-  # audioplayers: ^4.1.0
-  # sharedpreference: ^0.0.1
+
 
 dev_dependencies:
   flutter_test:
