--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,10 +11,19 @@
      <uses-permission android:name="com.android.vending.BILLING.v6" />
 <!-- <uses-permission android:name="com.google.android.play.billingclient.version" /> -->
      <uses-permission android:name="com.google.android.play.billingclient.v6" />
+     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
+      <queries>
+        <intent>
+          <action android:name="android.intent.action.SENDTO" />
+          <data android:scheme="mailto" />
+        </intent>
+      </queries>
    <application
         android:label="ptsbook"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:requestLegacyExternalStorage="true">
+        
         <!-- <activity android:name="com.ryanheise.audioservice.AudioServiceActivity" 
          android:name=".MainActivity"
         ...> -->
