--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
      <uses-permission android:name="com.android.vending.BILLING.v6" />
 <!-- <uses-permission android:name="com.google.android.play.billingclient.version" /> -->
      <uses-permission android:name="com.google.android.play.billingclient.v6" />
-     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
+     <!-- <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/> -->
       <queries>
         <intent>
           <action android:name="android.intent.action.SENDTO" />
