--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.7
+version: 1.0.8
 
 environment:
   sdk: '>=2.19.2 <3.0.0'
@@ -53,6 +53,8 @@ dependencies:
   permission_handler: ^10.4.3
   google_mlkit_translation: ^0.8.0
   flutter_email_sender: ^6.0.1
+  excel: ^2.1.0
+  dio: ^5.3.2
   # syncfusion_flutter_pdf: ^22.2.10
 
 
